
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;


 int send (int,int *,int,int ) ;

__attribute__((used)) static int sock_send (int sock, u_char * src, int len){

 int sbytes;
 sbytes = send (sock, src, len, 0);
 return (sbytes);
}
